--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,10 @@ script:
  - mkdocs build
 
 deploy:
-  provider: surge
-  project: ./site
-  domain: juandinoguera.surge.sh
-  skip_cleanup: true
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  local-dir: web/
+  on:
+    branch: master
